--- a/app/views/user_templates/show_user.html.erb
+++ b/app/views/user_templates/show_user.html.erb
@@ -1,52 +1,39 @@
-<h1><%=@user_name%></h1>
+<nav>
+      <ul>
+        <li><a href="/users">Users</a></li>
+        <li><a href="/photos">Photos</a></li>
+      </ul>
+    </nav>
+<h1><%=@user.username%></h1>
 
 <dl>
   <dt>ID</dt>
-    <dd><%=@user_id%></dd>
+    <dd><%=@user.id%></dd>
   <dt>Edit user</dt>
     <dd>Username</dd>
 </dl>
 
-<h1>Own Photos (<%=@posted_photos.count%>)</h1>
+<h2>Own Photos (<%=@user.own_photos.count%>)</h2>
 
 <table border="1">
-  <tr>
-    <th>
-      Image
-    </th>
-    
-    <th>
-      Owner
-    </th>
+    <tr>
+      <th>Image</th>
+      <th>Owner</th>
+      <th>Caption</th>
+      <th>Posted</th>
+    </tr>
 
-    <th>
-      Caption
-    </th>
-    
-    <th>
-      Posted
-    </th>
-  </tr>
-
-   <%@posted_photos.each do |a_foto|%>
+    <%@user.own_photos.each do |a_photo|%>
     <tr>
       <td>
-        <%=a_foto.image%>%
+      <img src="<%=a_photo.image%>">
       </td>
-
-       <td>
-        <%=@user_name%>
-      </td>
-        
-       <td>
-        <%=a_foto.caption%>
-      </td>
-
-       <td>
-        <%=a_foto.created_at%>
+      <td><%=a_photo.poster.username%></td>
+      <td><%=a_photo.caption%></td>
+      <td><%=a_photo.created_at%></td>
+      <td>
+        <a href=<%="/photos/#{a_photo.id}"%>>Show details</a>
       </td>
     </tr>
-  <%end%>
-
-
+    <%end%>
 </table>
