--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -7,6 +7,15 @@
 
 <h1>List of users</h1>
 
+<form action="/add_user">
+ <label for="add_user">
+    Username
+  </label>
+  <input id="add_user" name="new_user" >
+  <button>Add user</button>
+</form>
+
+
 <table border="1">
   <tr>
     <th>
